<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rramos.laboratorio_04.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/contabilidad_de_ingresos_egresos"
            android:textSize="18sp"
            android:padding="25dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saldo_actual_ahorro"
                android:padding="15dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_weight="1"
                android:text="@string/_1200"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:id="@+id/total_ahorro"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saldo_actual_credito"
                android:padding="15dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/total_credito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:text="@string/_2000"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saldo_actual_efectivo"
                android:padding="15dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_weight="1"
                android:text="@string/_120"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:id="@+id/total_efectivo"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/proporsion_ingresos_egresos"
            android:textSize="15sp"
            android:textAlignment="center"/>

        <ProgressBar
            android:id="@+id/proporsion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:padding="15dp"
            />
        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/proporsion2">

        </com.github.mikephil.charting.charts.PieChart>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@android:drawable/ic_menu_add"
            android:layout_gravity="end"
            android:onClick="agregarMonto"/>

    </LinearLayout>


</ScrollView>
